...
    <string name="like_us_on_facebook">Like us on Facebook</string>
    <string name="legal">Legal</string>
    <string name="sign_out">Sign out</string>

    <!--Payment fragment-->
    <string name="title_payment">Payment</string>
    <string name="title_payment_add">Add Payment</string>
    <string name="title_payment_edit">Edit Payment</string>
    <string name="title_payment_history">Payment History</string>
    <string name="label_payment_methods">Payment Methods</string>
    <string name="label_payment_method">Payment Method</string>
    <string name="promo_payment_get_free_rides">Get Free Rides!</string>
    <string name="promo_payment_invite">Invite Your Friends</string>
...
    <string name="payment_delete_error">You can not delete primary card</string>
    <string name="payment_add_error">Please, enter valid data for your card</string>
    <string name="payment_add_error_already_exists">This card already exists.\nPlease, enter new one.</string>
    <string name="payment_set_primary_error">There appears to be a problem with the newly selected primary card. Please add or select another payment card.</string>
    <string name="payment_card_template">Personal <b>&#183; &#183; &#183; &#183;</b> %1$s</string>
    <string name="payment_select_method">Please select payment method</string>
    <string name="hint_credit_card_number">Credit Card Number</string>
    <string name="hint_credit_card_mm">MM</string>
    <string name="hint_credit_card_yy">YY</string>
    <string name="hint_credit_card_cvv">CVV</string>
    <string name="hint_zip">ZIP</string>
    <string name="btn_add_payment">Add Payment</string>
    <string name="notification_verify_email_before">Verify email to start riding</string>
    <string name="notification_set_payment_before">Save a payment method to start riding</string>
    <string name="notification_primary_card_expired">Your primary credit card expired</string>
    <string name="error_set_payment_before">Please save a payment\n method to start riding.</string>
    <string name="warning_location_distance">Your requested pickup location is more than %d yards away from your current location. Continue?</string>
    <string name="text_pickup_time_less_tan_min">Pickup time is approximately &lt;1 min</string>
...
    <string name="connect_driver_info">Direct Connect enables you to pair with your driver by simply entering in their Driver ID</string>
    <string name="connect_driver_title">Connect Driver</string>
    <string name="direct_connect_id_hint">Enter Driver ID</string>
    <string name="direct_connect_request_driver">Request Driver</string>
    <string name="direct_connect_car_categories">Car Categories</string>
    <string name="direct_connect_requesting">Connecting…</string>
    <string name="direct_connect_cancel_request">Do you really want to cancel this request?</string>
    <string name="direct_connect_no_driver">Driver did not accept your request</string>
    <string name="direct_connect_during_ride">Cannot use direct connect when ride is active.</string>

    <!-- Stacked rides -->
    <string name="stacked_ride_prev_ride">Closest Driver is finishing up a trip nearby</string>

...
